# utility-files

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  check_password.py  python_random_password.py  random_password.py  random_password_test.py
Autohotkey/: MinimizeAllButActiveWindow.ahk  README.md  ToggleScrollLock.ahk
Batch/: robocopy2.bat  robocopy2.py
Batch/cpp-src/: .gitignore  Makefile  config.json  main.cpp  robocopy2.hpp
Batch/get_motherboard_spec/: get_motherboard_spec.cmd
Batch/notepadpp-7zip/: notepadpp-7zip.bat
C++/CMakeTutorial/: CMakeLists.txt
C++/CMakeTutorial/MathFunctions/: CMakeLists.txt  mysqrt.cpp  mysqrt.h
C++/CMakeTutorial/src/: TutorialConfig.h.in  main.cpp
C++/unityCTestingFrameworkTrial/: CMakeLists.txt  DumbExample.c  README.md  TestDumbExample.c  cmakeBuildAndRun.sh
ContinuousIntegrationDocker/: Dockerfile
ContinuousIntegrationDocker/lua-image/: Dockerfile
Cpp/: README.md
Cpp/InterfaceParameterTrial/: build_and_run.sh
Cpp/ceedling_mock_trial/: project.yml
Cpp/cliutilsCMake/: CMakeLists.txt  README.md
Cpp/cliutilsCMake/apps/: Makefile
Cpp/cliutilsCMake/src/: CMakeLists.txt  cmake_install.cmake
Cpp/cliutilsCMake/tests/: CMakeLists.txt  TestDumbExample.c
Cpp/cliutils_cmake_with_unity/: compileBuild.sh
Cpp/convert_dec_to_bin/: .gitignore  CMakeLists.txt  build_and_run.sh  convert_dec_to_bin.c  convert_dec_to_bin.h  main.c
Cpp/cpp_google_test_trial/: CMakeLists.txt  build_and_run.sh  windows_build.cmd
Cpp/cpp_google_test_trial/src/: CMakeLists.txt  main.cpp
Cpp/cpp_google_test_trial/src/fibonacci/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp
Cpp/cpp_google_test_trial/test/: CMakeLists.txt  fibonacci_test.cpp
Cpp/sprintfTest/: CMakeLists.txt  Makefile  compileBuild.bat
Cpp/sprintfTest/tests/: CMakeLists.txt  SprintfTest.c  TestDumbExample.c
Cpp/terminal_clock/: CMakeLists.txt  main.cpp  run.sh  run_and_build.sh  terminal_clock.cpp  terminal_clock.hpp
Cpp/unityCTestingFrameworkTrial/: CMakeLists.txt  cmakeBuildAndRun.sh
Cpp/unityCTestingFrameworkTrial/unity_fixture/: CMakeLists.txt
DockerImages/jenkins-with-docker/: DockerBuild.md  Dockerfile  build_docker.sh  jenkins-cron.md
DockerImages/lua-image/: Dockerfile
Fonts/Hack/: README.md  hack-zero-diamond.7z  hack-zero-forward-slashed.7z
Html/FlexboxTrial/: index.html  style.css
Html/HtmlConvertSlashes/: index.js
Html/LeagueChamps/: index.html  style.css
HtmlConvertSlashes/: index.html  index.js
HtmlTableOutput/html/: Test.html
Java/: .gitignore  JavaTabulator.java  PrintFormatted.java  README.md  pom.xml
Java/DateTimeUtils/: DateTimeUtils.java
Java/GetTimeInUtc/: GetTimeInUtc.java  GetTimeInUtcTest.java
Java/ListMultithread/: ListMultithread.java
Java/LogProgress/: LogProgress.java
Java/MyCompletionService/: MyCompletionService.java  MyCompletionServiceTest.java
Java/MyStringUtils/: MyStringUtils.java  MyStringUtilsTest.java
Java/ObjectMapperConfig/: ObjectMapperConfig.java  ObjectMapperConfigTest.java  ObjectMapperHelper.java  ObjectMapperHelperTest.java
Java/ObjectMapperHelper/: ObjectMapperConfig.java  ObjectMapperConfigTest.java  ObjectMapperHelper.java  ObjectMapperHelperTest.java
Java/ObjectReaderWriterFactory/: ObjectReaderWriterFactory.java  ObjectReaderWriterFactoryTest.java
Java/PublisherSubscriberExample/: .gitignore
Java/ReadFromTestFilesHelper/: MyAssertHelper.java  ReadFromTestFilesHelper.java
Java/RegexUtils/: RegexUtils.java
Java/SpringAsyncConfig/: SpringAsyncConfig.java  SpringAsyncConfigTest.java  application.properties
Java/TestFilesHelpers/: ReadFromTestFilesHelper.java  TestJsonProcessingException.java
Java/encodeuricomponent/: EncodeURIComponent.java  EncodeURIComponentTest.java
Java/mycompletionservice/: MyCompletionService.java
JavaScript/: index.js
JavaScript/code-select-all/: code-select-all.js
JavaScript/convert-text-to-p/: .gitignore  app.js  package-lock.json  package.json  tsconfig.json
JavaScript/for-loop-time-trial/: README.adoc  index.html  index.js
Lua/DurstenfeldShuffle/: DurstenfeldShuffle.lua
Lua/InheritanceTrial/: BaseClass.lua  DerivedClass.lua
Lua/LuaFilesystemTrial/: Config.lua  RootModule.lua
Lua/LuaHashSet/: HashSet.lua  HashSet_spec.lua  HashSet_test.lua
Python/autoformat_scripts/: black_autoformat.bat
Python/convert_beginning_tabs_to_spaces/: Pipfile  conftest.py
Python/convert_dynamodb_to_json/: .gitignore  convert_dynamo_to_normal.ipynb
Python/convert_rgb_to_hex/: convert_rgb_to_hex_test.py
Python/elapsed_time/: Pipfile  config.yaml  elapsed_time.py
Python/encode_url/: encode_url.py
Python/html_parser/: Pipfile  styles.css
Python/jq_slurp/: jq2.py
Python/markdownTableOfContents/: markdown_toc.py  toc.md
Python/nestedFunctions/: nestedFunc.py
Python/nohkeyboard-slim/: .gitignore  Pipfile
Python/now_utc/: now_utc.py
Python/output_files_helper/: output_files_helper.py
Python/powershell_paths/: envpaths.ps1  envpaths.py  startup.bat
Python/random_password/: .gitignore  check_password.py
Python/run_commands_async/: run.sh  run_commands_async.py  run_google_java_format.py
Python/run_commands_multiprocess/: config.yaml  run_google_java_format.py
Python/split_h1_headers/: .gitignore  go.mod  go.sum  split_h1_headers.py
RegEx/: README.adoc  date_regex.py
Rust/pass-in-impl-trait-as-func-parameter/: Cargo.toml
ShellScripts/: convert_adoc_to_markdown.sh  elapsed_time.sh  get_bash_script_dir.sh  git_diff_name_only  git_merge.sh  git_status_oneline.sh  groups.adoc  tail_until_pattern_found.sh  tail_until_pattern_matched.sh
aws-notes/: Pipfile  aws-notes.adoc  aws-notes.html
batch/bcdboot/: README.md
cpp/CMakeTutorial/MathFunctions/: CMakeLists.txt
git/: README.md
java/: .gitignore  pom.xml
python/: .gitignore  clear_venv.sh  multiprocess_print.py  pylintrc.toml  ruff.toml
regex/: README.adoc
shellscripts/: git-add-extension.sh  git_status_oneline.sh  google-java-format-diff.sh  pushd_then_execute.sh  refresh_dns.sh  splitfiles.sh  ssh_settings.conf  ubuntu_extra_setup.sh  user_prompt.sh
(+229 files in other folders)
